k8s-idp/istio/grc/grc-destination.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: grc-team-mtls
  namespace: grc-team
spec:
  host: "*.grc-team.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
